update order request process