@@ -1,12 +1,16 @@
 package com.alliance.inventoryservice.services;
 
 import com.alliance.inventoryservice.dto.InventoryResponse;
+import com.alliance.inventoryservice.model.Inventory;
 import com.alliance.inventoryservice.repository.InventoryRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,12 +21,23 @@ public class InventoryServiceImpl implements InventoryService {
   @Override
   @Transactional(readOnly = true)
   public List<InventoryResponse> isInStock(List<String> skuCodes) {
-    return inventoryRepository.findBySkuCodeIn(skuCodes)
-      .stream()
-      .map(inventory -> InventoryResponse.builder()
-        .skuCode(inventory.getSkuCode())
-        .isInStock(inventory.getQuantity() > 0)
+    // Fetch inventory data only for the required SKU codes
+    Map<String, Integer> inventoryMap = getInventoryForSkuCodes(skuCodes);
+
+    // Map inventory data to InventoryResponse objects
+    return skuCodes.stream()
+      .map(skuCode -> InventoryResponse.builder()
+        .skuCode(skuCode)
+        .isInStock(inventoryMap.getOrDefault(skuCode, 0) > 0)
         .build())
-      .toList();
+      .collect(Collectors.toList());
+  }
+
+  // Efficiently fetch inventory data for the provided SKU codes
+  private Map<String, Integer> getInventoryForSkuCodes(List<String> skuCodes) {
+    List<Inventory> inventoryData = inventoryRepository.findBySkuCodeIn(skuCodes);
+    Map<String, Integer> inventoryMap = new HashMap<>();
+    inventoryData.forEach(inventory -> inventoryMap.put(inventory.getSkuCode(), inventory.getQuantity()));
+    return inventoryMap;
   }
 }
